# virtual_camera_client

./: CMakeLists.txt  package.xml
config/: pixel3a.yaml  surface_pro_6.yaml
launch/: client_camera_pose.launch  pixel.launch  surface.launch
nodes/: camera_info_publisher  camera_publisher
